# data/products.go
@@ -2,10 +2,10 @@ package data
 
 import (
 	"fmt"
-	"regexp"
-
-	"github.com/go-playground/validator"
 )
+
+// ErrProductNotFound is an error raised when a product can not be found in the database
+var ErrProductNotFound = fmt.Errorf("Product not found")
 
 // Product defines the structure for an API product
 // swagger:model
@@ -16,78 +16,73 @@ type Product struct {
 	// min: 1
 	ID int `json:"id"` // Unique identifier for the product
 
-	// the name for this product
+	// the name for this poduct
 	//
 	// required: true
 	// max length: 255
 	Name string `json:"name" validate:"required"`
 
-	// the description for this product
+	// the description for this poduct
 	//
 	// required: false
 	// max length: 10000
 	Description string `json:"description"`
 
-	// the price of the product
+	// the price for the product
 	//
 	// required: true
 	// min: 0.01
-	Price float32 `json:"price" validate:"gt=0"`
+	Price float32 `json:"price" validate:"required,gt=0"`
 
-	// the SKU of the product
+	// the SKU for the product
 	//
 	// required: true
 	// pattern: [a-z]+-[a-z]+-[a-z]+
-	SKU string `json:"sku" validate:"required,sku"`
+	SKU string `json:"sku" validate:"sku"`
 }
 
-// Validate used to validate the product struct json
-func (p *Product) Validate() error {
-	validate := validator.New()
-	validate.RegisterValidation("sku", validateSKU)
-	return validate.Struct(p)
-}
-
-func validateSKU(fl validator.FieldLevel) bool {
-	// sku is of format abc-def-slfkds
-	re := regexp.MustCompile(`[a-z]+-[a-z]+-[a-z]+`)
-	matches := re.FindAllString(fl.Field().String(), -1)
-
-	if len(matches) != 1 {
-		return false
-	}
-
-	return true
-}
-
-// Products type
+// Products defines a slice of Product
 type Products []*Product
 
-// GetProducts returns all the products
+// GetProducts returns all products from the database
 func GetProducts() Products {
 	return productList
 }
 
-// AddProduct is used to add a new product to the existing list
-func AddProduct(p *Product) {
-	p.ID = getNextID()
-	productList = append(productList, p)
-}
-
-func getNextID() int {
-	lp := productList[len(productList)-1]
-	return lp.ID + 1
-}
-
-// UpdateProduct used to update a single product
-func UpdateProduct(id int, p *Product) error {
-	_, pos, err := findProduct(id)
-	if err != nil {
-		return err
+// GetProductByID returns a single product which matches the id from the
+// database.
+// If a product is not found this function returns a ProductNotFound error
+func GetProductByID(id int) (*Product, error) {
+	i := findIndexByProductID(id)
+	if id == -1 {
+		return nil, ErrProductNotFound
 	}
-	p.ID = id
-	productList[pos] = p
+
+	return productList[i], nil
+}
+
+// UpdateProduct replaces a product in the database with the given
+// item.
+// If a product with the given id does not exist in the database
+// this function returns a ProductNotFound error
+func UpdateProduct(p Product) error {
+	i := findIndexByProductID(p.ID)
+	if i == -1 {
+		return ErrProductNotFound
+	}
+
+	// update the product in the DB
+	productList[i] = &p
+
 	return nil
+}
+
+// AddProduct adds a new product to the database
+func AddProduct(p Product) {
+	// get the next id in sequence
+	maxID := productList[len(productList)-1].ID
+	p.ID = maxID + 1
+	productList = append(productList, &p)
 }
 
 // DeleteProduct deletes a product from the database
@@ -114,29 +109,17 @@ func findIndexByProductID(id int) int {
 	return -1
 }
 
-// ErrProductNotFound is a custom error if product not found
-var ErrProductNotFound = fmt.Errorf("product not found")
-
-func findProduct(id int) (*Product, int, error) {
-	for i, p := range productList {
-		if p.ID == id {
-			return p, i, nil
-		}
-	}
-	return nil, -1, ErrProductNotFound
-}
-
 var productList = []*Product{
 	&Product{
 		ID:          1,
 		Name:        "Latte",
-		Description: "Frothy milky coffe",
+		Description: "Frothy milky coffee",
 		Price:       2.45,
-		SKU:         "abc123",
+		SKU:         "abc323",
 	},
 	&Product{
 		ID:          2,
-		Name:        "Espresso",
+		Name:        "Esspresso",
 		Description: "Short and strong coffee without milk",
 		Price:       1.99,
 		SKU:         "fjd34",
