# handlers/delete.go
@@ -7,12 +7,15 @@ import (
 )
 
 // swagger:route DELETE /products/{id} products deleteProduct
-// Returns no content
+// Update a products details
+//
 // responses:
-//   201: noContentResponse
+//	201: noContentResponse
+//  404: errorResponse
+//  501: errorResponse
 
 // Delete handles DELETE requests and removes items from the database
-func (p *Product) Delete(rw http.ResponseWriter, r *http.Request) {
+func (p *Products) Delete(rw http.ResponseWriter, r *http.Request) {
 	id := getProductID(r)
 
 	p.l.Println("[DEBUG] deleting record id", id)
@@ -20,6 +23,7 @@ func (p *Product) Delete(rw http.ResponseWriter, r *http.Request) {
 	err := data.DeleteProduct(id)
 	if err == data.ErrProductNotFound {
 		p.l.Println("[ERROR] deleting record id does not exist")
+
 		rw.WriteHeader(http.StatusNotFound)
 		data.ToJSON(&GenericError{Message: err.Error()}, rw)
 		return
@@ -27,7 +31,11 @@ func (p *Product) Delete(rw http.ResponseWriter, r *http.Request) {
 
 	if err != nil {
 		p.l.Println("[ERROR] deleting record", err)
+
 		rw.WriteHeader(http.StatusInternalServerError)
 		data.ToJSON(&GenericError{Message: err.Error()}, rw)
+		return
 	}
+
+	rw.WriteHeader(http.StatusNoContent)
 }
