# handlers/post.go
@@ -6,12 +6,19 @@ import (
 	"github.com/immanoj16/go-micro/data"
 )
 
-// AddProduct is used to add a new product
-func (p *Product) AddProduct(rw http.ResponseWriter, r *http.Request) {
-	p.l.Println("Handle POST Product")
+// swagger:route POST /products products createProduct
+// Create a new product
+//
+// responses:
+//	200: productResponse
+//  422: errorValidation
+//  501: errorResponse
 
+// Create handles POST requests to add new products
+func (p *Products) Create(rw http.ResponseWriter, r *http.Request) {
+	// fetch the product from the context
 	prod := r.Context().Value(KeyProduct{}).(data.Product)
 
-	p.l.Printf("Prod: %#v", &prod)
-	data.AddProduct(&prod)
+	p.l.Printf("[DEBUG] Inserting product: %#v\n", prod)
+	data.AddProduct(prod)
 }
